# DynamoDB-SingleTable

./: .buildinfo  .coderabbit.yaml  .coverage  .gitignore  AGENTS.md  CLAUDE.md  README.html  ddb_single.html  docker-compose.yml  example_usage.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  readme.md  readme.rst  release-prd.ps1  release-test.ps1  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: ddb_single.doctree  environment.pickle  index.doctree  modules.doctree  readme.doctree
.github/: dependabot.yml
.github/workflows/: deploy.yml  lint_and_test.yml  release.yml
_sources/: ddb_single.rst.txt  modules.rst.txt
_static/: documentation_options.js
ddb_single/: __init__.py  _cli.py  error.py  model.py  query.py  table.py  utils.py  utils_botos.py
ddb_single.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docker/dynamodb/: shared-local-instance.db
docs/: .buildinfo  ddb_single.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/.doctrees/: ddb_single.doctree  environment.pickle  index.doctree  modules.doctree  (+1 more)
docs_src/: conf.py  index.rst  modules.rst  readme.md
tests/: models_for_cli.py  query.py  relation.py  test_batch.py  test_cli_apply_model_change.py  test_dbfield.py  test_desc.py  test_query.py  test_query_unique_doubled.py  test_query_unique_regression.py  test_relation.py  test_search.py  test_search_index_update.py  test_search_key_chunking.py  test_search_table.py  test_utils.py
(+2 files in other folders)
