
[tool.poetry]
authors = ["medaka0213"]
name = "ddb_single"
version = "0.4.13"
description = "Python DynamoDB interface, specialized in single-table design."
license = "MIT"
homepage = "https://medaka0213.github.io/DynamoDB-SingleTable/"
repository = "https://github.com/medaka0213/DynamoDB-SingleTable"
keywords = ["aws", "dynamodb", "serverless"]
packages = [{ include = "ddb_single" }]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.79"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
pyproject-flake8 = "^6.1.0"
pytest-cov = "^5.0.0"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
